# SegLight

./: .gitignore  CITATION.cff  LICENSE  README.md  config.py  data_provider.py  demo_paper_framework.py  example_usage.py  inference.py  main.py  network.py  simple_demo.py
cpp-inference/: .gitignore  CMakeLists.txt  README.md  inferencer.hpp  main.cpp  test.cpp
cpp-inference/include/: inferencer.hpp
cpp-inference/src/: inferencer.cpp
paper/: README.md  __init__.py  main_paper.py
paper/benchmarks/: __init__.py  inference.py
paper/evaluation/: __init__.py  metrics.py
paper/statistics/: __init__.py  analyzer.py
paper/utils/: __init__.py  model_loader.py
paper/visualization/: __init__.py  plotter.py
